--- a/new/theme/2020/templates/page.html
+++ b/new/theme/2020/templates/page.html
@@ -224,7 +224,7 @@
   {% if page.slug == "careers/" %}
   <div class="bg-graylight">
     <div
-      class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-banner ml-auto mr-auto">
+      class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-1200 ml-auto mr-auto">
       <div class="w-100 center">
         <h2 class="white fw6 f1-l f2 roboto tc ma0">
           {{ page.subtitle }}
@@ -240,7 +240,7 @@
   {% else %}
   <div class="bg-graylight">
     <div
-      class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-banner ml-auto mr-auto">
+      class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-1200 ml-auto mr-auto">
       <div class="w-100 center">
         <h2 class="white fw6 f1-l f2 roboto tc ma0">
           {{ page.title }}
@@ -253,7 +253,7 @@
 {% endblock header %}
 {% block content %}
 <div class="bg-graylight">
-  <div class="roboto internal mw-banner ml-auto mr-auto roboto bg-white ph4-l ph3 pt5-l pt4 pb5">
+  <div class="roboto internal mw-1200 ml-auto mr-auto roboto bg-white ph4-l ph3 pt5-l pt4 pb5">
     <h1 class="roboto tc">{% if page.title == "People" %}{{ page.subtitle }}{% else %}{{ page.title }}{% endif %}</h1>
     <div class="lh-2 tl">
       {{ page.content }}
