fix(front): #3541 center containers in the footer
Former-commit-id: f520cb80edc64a6ff89da0c9bd803b66299decb8

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-  <div class="pb4 w-footer-links ml0-footer text-right-l text-center-ml db-l dn nowrap">
+  <div class="pb4 w-footer-links ml0-footer text-center-ml db-l dn nowrap">
     <div class="pt4-l b dib v-top tl mr2">
       <div class="lh-2">
         <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
@@ -144,7 +144,7 @@
         </a><br>
       </div>
     </div>
-    <div class="pt4-l b dib v-top tl mw-14">
+    <div class="pt4-l b dib v-top tl mw-14 fr-xl">
       <div class="social-media">
         <a class="pr3 no-underline" href="https://www.instagram.com/fluidattacks/">
           <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-instagram.png"
