--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -226,6 +226,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   .text-right-l { text-align: right; }
   .ml0-footer { margin-left: 0; }
   .db-xl { display: block; }
+  .fr-xl { float: right; }
 }
 
 // Small screens
