refac(cross): #3489.3 native english improvement
- The changes suggested by Santaularia were implemented on some pages.


Former-commit-id: b88d58b655dca6fb339d713a665c3de57001b5f6

--- a/new/theme/2020/templates/products/forces.html
+++ b/new/theme/2020/templates/products/forces.html
@@ -100,7 +100,7 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/forces/forces-1.png"
         alt="Young hacker smiling">
         <p class="roboto fw1 c-lightblack f5 lh-2">
-          Support vulnerabilities closing when <br>
+          Support vulnerability closing when <br>
           Forces breaks the build.
         </p>
     </div>
@@ -110,7 +110,7 @@
         alt="Young hacker smiling">
         <p class="roboto fw1 c-lightblack f5 lh-2">
           Identify the status of known vulnerabilities <br>
-          on your system.
+          in your system.
         </p>
     </div>
     <div class="item-carousel mh4 pa0 dib v-top">
@@ -136,7 +136,7 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/forces/forces-5.png"
         alt="Young hacker smiling">
         <p class="roboto fw1 c-lightblack f5 lh-2">
-          Interactive cycle of vulnerability closing.
+          Interactive cycle for the vulnerability closing process.
         </p>
     </div>
   </div>
