--- a/new/theme/2020/templates/products/integrates.html
+++ b/new/theme/2020/templates/products/integrates.html
@@ -162,8 +162,7 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-5.png"
         alt="Young hacker smiling">
         <p class="roboto fw1 c-lightblack f5 lh-2">
-          With the API Key the users can <br>
-          integrate our app with their existing <br>
+          Integrate our app with your existing <br>
           products using a common query language <br>
           for modern APIs (GraphQL).<br>
           <br>
@@ -186,10 +185,9 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-7.png"
         alt="Young hacker smiling">
         <p class="roboto fw1 c-lightblack f5 lh-2">
-          Establish quick communication with and <br>
-          receive important notifications from <br>
-          the Fluid Attacks' team <br>
-          (when you purchase Drills). <br>
+          Establish quick communication with, and <br>
+          receive important notifications from, <br>
+          our team (when you purchase Drills). <br>
           <br>
         </p>
     </div>
