feat(front): #3550.1 add breadcrumb in use cases
Former-commit-id: c1211900a9c32158d5706ce3de6c3f72acbed4f3

--- a/new/theme/2020/templates/use-cases/one-shot.html
+++ b/new/theme/2020/templates/use-cases/one-shot.html
@@ -27,6 +27,39 @@
   {% endif %}
 {% endblock title %}
 
+{% block breadcrumb%}
+  <!-- navcontent-container -->
+<div class="pv0">
+  <!-- navcontent-info -->
+  <div class="df ma-auto bg-fluid-black">
+    <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
+      <ul class="dib list w-auto mh3-l pl0-l pl3 ml1">
+        <li class="dib mt0">
+          <a class="c-fluid-gray hover-white no-underline"
+             href="{{ SITEURL }}/">
+            Home
+          </a>
+          <span class="c-fluid-gray v-mid b"> / </span>
+        </li>
+        <li class="dib mt0">
+          <a class="c-fluid-gray hover-white no-underline"
+             href="{{ SITEURL }}/use-cases/continuous-hacking/">
+            Use Cases
+          </a>
+          <span class="c-fluid-gray v-mid b"> / </span>
+        </li>
+        <li class="dib mt0">
+          <a class="white hover-white no-underline"
+             href=".">
+            One Shot Hacking
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+{% endblock breadcrumb %}
+
 {% block header %}
 <div
   class="one-shot-bg bg-banner-sz coverm cover-s banner-height justify-center items-center flex bg-center">
