--- a/new/theme/2020/templates/use-cases/feature.html
+++ b/new/theme/2020/templates/use-cases/feature.html
@@ -27,6 +27,46 @@
   {% endif %}
 {% endblock title %}
 
+{% block breadcrumb%}
+<!-- navcontent-container -->
+<div class="pv0">
+  <!-- navcontent-info -->
+  <div class="df ma-auto bg-fluid-black">
+    <div class="roboto f6-l f7 tl mw9 ml-auto mr-auto">
+      <ul class="dib list w-auto mh3-l pl0-l pl3 ml1">
+        <li class="dib mt0">
+          <a class="c-fluid-gray hover-white no-underline"
+             href="{{ SITEURL }}/">
+            Home
+          </a>
+          <span class="c-fluid-gray v-mid b"> / </span>
+        </li>
+        <li class="dib mt0">
+          <a class="c-fluid-gray hover-white no-underline"
+             href="{{ SITEURL }}/use-cases/continuous-hacking/">
+            Use Cases
+          </a>
+          <span class="c-fluid-gray v-mid b"> / </span>
+        </li>
+        <li class="dib mt0">
+          <a class="c-fluid-gray hover-white no-underline"
+             href="{{ SITEURL }}/use-cases/{{ page.category }}/">
+            {{ page.section }}
+          </a>
+          <span class="c-fluid-gray v-mid b"> / </span>
+        </li>
+        <li class="dib mt0">
+          <a class="white hover-white no-underline"
+             href=".">
+            {{ page.title }}
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+{% endblock breadcrumb %}
+
 {% block header %}
 {% endblock header %}
 
