integrates\feat(front): #1719.38 add jsx-a11y plugin
- Fix missing alt text in Preloader component.
- Fix wrong use of anchor tag in approve and delete formatters.
- Fix missing title prop on iframes tags in Graphic component.
- Fix wrong use of li tag in AutoCompleteText component.


Former-commit-id: 4266d1db6ad7688af0658868736808802c62ee60

--- a/front/src/components/DataTableNext/index.css
+++ b/front/src/components/DataTableNext/index.css
@@ -2,7 +2,8 @@
   overflow-x: auto;
 }
 
-:local .tableHeader > th, .tableBody > td {
+:local .tableHeader > th,
+.tableBody > td {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -37,12 +38,12 @@
 }
 
 :local .searchBar {
-  composes: formControl from '../../utils/forms/index.css';
+  composes: formControl from "../../utils/forms/index.css";
   height: 30px;
 }
 
 :local .exportCsv {
-  composes: button from '../Button/index.css';
+  composes: button from "../Button/index.css";
 }
 
 :local .tableModalContainer {
@@ -61,4 +62,9 @@
 
 :local .tableOptions {
   margin-bottom: 5px;
+}
+
+:local .buttonFormatter {
+  border: none;
+  background: transparent;
 }
