refac(cross): #3489.4 native english improvement
- The changes suggested by Santaularia were implemented on some pages.


Former-commit-id: 2c77ab273b692790fd1a4f7df8a7d0ec250d3668

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -164,7 +164,7 @@
         <li>
           <a class="no-underline" href="{{ SITEURL }}/products/forces/">
             <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
-              <strong class="b">Forces</strong>: breaks the build
+              <strong class="b">Forces</strong> breaks the build
               to force remediation of confirmed deep vulnerabilities,
               re-opened vulnerabilities, and new peripheral vulnerabilities.
               It can also verify your post-deploy production status.
