--- a/new/theme/2020/templates/products/forces.html
+++ b/new/theme/2020/templates/products/forces.html
@@ -133,8 +133,8 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/forces/forces-1.png"
         alt="Young hacker smiling">
         <p class="roboto fw1 c-lightblack f5 lh-2">
-          Support vulnerability closing when <br>
-          Forces breaks the build.
+          Forces supports vulnerability closing <br>
+          by breaking the build.
         </p>
     </div>
     <div class="item-carousel mh4 pa0 dib v-top">
