--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -122,10 +122,11 @@ $codeyellow: rgba(230, 219, 116, 1);
 .asap-bg { background-image: url('../../images/background-asap.png'); height: 25rem; }
 .continuous-bg { background-image: url('../../images/use-cases/continuous/main-continuous-hacking.png'); }
 .one-shot-bg { background-image: url('../../images/use-cases/one-shot/main-one-shot.png'); }
-.products-bg { background-image: url('../../images/products/products-cover.png'); }
-.integrates-bg { background-image: url('../../images/products/integrates/integrates-cover.png'); }
+.products-bg { background-image: url('../../images/products/cover-products.png'); }
+.integrates-bg { background-image: url('../../images/products/integrates/cover-integrates.png'); }
 .drills-bg { background-image: url('../../images/products/drills/drills-cover.png'); }
-.forces-bg { background-image: url('../../images/products/forces/forces-cover.png'); }
+.forces-bg { background-image: url('../../images/products/forces/cover-forces.png'); }
+.rules-bg { background-image: url('../../images/products/rules/cover-rules.png'); }
 .thank-you-bg { background-image: url('../../images/contact-us/bg-thank-you-page.png'); }
 .careers-main-bg { background-image: url('../../images/careers/hero-main-1.png'); }
 .resources-bg { background-image: url('../../images/resources/resources-main.png'); }
