--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      if (screen.width < 769) {
+        location = "/integrates/mobile";
+      }
+    </script>
     {% if not debug %}
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="9c4480b4-b8ae-44d8-9c6f-6300b86e9094" data-blockingmode="auto" type="text/javascript"></script>
     {% endif %}
