integrates\feat(cross): #2281.1 change orgs navbar
- Add a dropdown field in the navbar that allows the user to move
  between the organizations the user is a member of.
- Save the organization the user is visiting.
- This is good to have before setting the organization view as
  home.
- Change default organization name for its code name
- Change testing DB so an autoenrolled user's default organization
  has the default projects they are given access to.


Former-commit-id: 9da16daf3c253c4d5a21a4ce5946f2e0a1f44836

--- a/front/src/scenes/Dashboard/components/Navbar/index.css
+++ b/front/src/scenes/Dashboard/components/Navbar/index.css
@@ -19,6 +19,11 @@
   color: #FF3435;
 }
 
+:local .container select {
+  background: unset !important;
+  border-style: none !important;
+}
+
 :local .container button:focus {
   background: unset;
 }
@@ -36,5 +41,10 @@
     position: sticky;
     top: 0px;
     z-index: 4;
+  }
+
+  :local .organizationForm {
+    margin-left: auto;
+    width: max-content;
   }
 }
