fix(cross): #3469 remove duplicated page
Former-commit-id: 46a837a304454d3a720a0f9932575211a6841fe5

--- a/theme/2014/templates/footer.html
+++ b/theme/2014/templates/footer.html
@@ -46,7 +46,7 @@
           </h3>
         </a>
         <a class="white f5 hv-fluid-bk"
-          href="{{ SITEURL }}/values/">
+          href="{{ SITEURL }}/about-us/values/">
           Values
         </a><br>
         <a class="white f5 hv-fluid-bk"
