fix(front): #3289 fix clickable lists in menu
Former-commit-id: d9a370de813b5be73c97090f173fba1133bff1b3

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -867,3 +867,18 @@ video {
     }
   }
 }
+
+#products-title:checked~.products-list {
+  animation: fadein .5s;
+  display: block;
+}
+
+#usecases-title:checked~.usecases-list {
+  animation: fadein .5s;
+  display: block;
+}
+
+#aboutus-title:checked~.aboutus-list {
+  animation: fadein .5s;
+  display: block;
+}
