--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -29,7 +29,7 @@
             <ul class="o-40 menu-trans dib h-100 list ma0 pa0 relative tl w-auto minw-menu">
               <div class="products-menu h-maxcontent">
                 <li class="db pb3">
-                  <input class="dn" type="radio" name="menu3" id="products-title">
+                  <input class="dn" type="checkbox" name="products" id="products-title">
                   <label for="products-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
                     Products <div class="dib w1"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
                   </a>
@@ -59,7 +59,7 @@
               </div>
               <div class="usecases-menu h-maxcontent">
                 <li class="db pb3">
-                  <input class="dn" type="radio" name="menu3" id="usecases-title">
+                  <input class="dn" type="checkbox" name="usecases" id="usecases-title">
                   <label for="usecases-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
                     Use Cases <div class="dib w1"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
                   </a>
@@ -83,7 +83,7 @@
               </div>
               <div class="aboutus-menu h-maxcontent">
                 <li class="db pb3">
-                  <input class="dn" type="radio" name="menu3" id="aboutus-title">
+                  <input class="dn" type="checkbox" name="about-us" id="aboutus-title">
                   <label for="aboutus-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
                     About Us <div class="dib w1"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
                   </a>
