integrates\feat(cross): #2272.8 use organization as home
- Set organization view as Home.
- The last organization visited is saved and shown as Home the next
  time you login. If there is not any information, use the first
  result as Home.
- Adjust Selenium tests to new structure.


Former-commit-id: 7b55ef4c87e2d8de56c5f1906b04fbb41183ce35

--- a/front/src/scenes/Dashboard/components/Navbar/index.css
+++ b/front/src/scenes/Dashboard/components/Navbar/index.css
@@ -31,6 +31,9 @@
 :local .breadcrumb {
   margin-bottom: unset;
 }
+:local .breadcrumb > li:first-of-type {
+  font-weight: bold !important;
+}
 :local .breadcrumb > li + li::before {
   padding: 0 2px;
 }
