refac(cross): #3489.6 native english improvement
- Changes suggested by Santaularia were implemented on these pages


Former-commit-id: 1380cbe2ca706a145d0d8e57e09f6adc5ce4dd67

--- a/new/theme/2020/templates/products/forces.html
+++ b/new/theme/2020/templates/products/forces.html
@@ -151,8 +151,8 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/forces/forces-3.png"
         alt="Young hacker smiling">
         <p class="roboto fw1 c-lightblack f5 lh-2">
-          Recognize the exact moment a <br>
-          vulnerability appeared.
+          Scalability, speed and precision <br>
+          for your tested system.
         </p>
     </div>
     <div class="item-carousel mh4 pa0 dib v-top">
