--- a/new/theme/2020/templates/products/integrates.html
+++ b/new/theme/2020/templates/products/integrates.html
@@ -183,11 +183,11 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-8.png"
         alt="Young hacker smiling">
         <p class="roboto fw1 c-lightblack f5 lh-2">
-          Fluid Attacks offers the Integrates-App <br>
-          (on Android and iOS) for executive control<br>
-          of processes. It shows you the most crucial<br>
-          indicator: vulnerability remediation rate on<br>
-          your tested systems.
+          Facilitate the executive control of processes<br>
+          via the Integrates-App (on Android and iOS)<br>
+          by providing crucial information<br>
+          on the vulnerability remediation rate<br>
+          on your tested systems.
         </p>
     </div>
     <div class="item-carousel mh4 pa0 dib">
