integrates\feat(front): #2349 add pro badge
- Create proFormatter for header rows.
- Add pro to Tags and Business Criticality.
- Add pro to Portfolio.

Closes #2349


Former-commit-id: 709568a21cd463e7d172a212c00f5ceac2bcd6ac

--- a/front/src/components/DataTableNext/index.css
+++ b/front/src/components/DataTableNext/index.css
@@ -75,3 +75,23 @@
   border: none;
   background: transparent;
 }
+
+:local .plusFormatter,
+.plusFormatter > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+:local .plusFormatter {
+  flex-wrap: wrap;
+}
+
+:local .plusFormatter > div {
+  flex-wrap: wrap-reverse;
+  white-space: nowrap;
+}
+
+:local .plusFormatter :global .badge {
+  position: relative;
+}
