--- a/front/src/scenes/Dashboard/components/Navbar/index.css
+++ b/front/src/scenes/Dashboard/components/Navbar/index.css
@@ -1,8 +1,8 @@
 :local .container {
   font-size: 18px;
   margin-right: unset;
-  background-color: #F5F5F5;
-  border-bottom: 2px #E4E4E4 solid;
+  background-color: #f5f5f5;
+  border-bottom: 2px #e4e4e4 solid;
 }
 
 :local .container input {
@@ -13,37 +13,55 @@
   border-right: none;
 }
 
-:local .container button {
-  background: unset;
-  border: none;
-  color: #FF3435;
-}
-
-:local .container select {
-  background: unset !important;
-  border-style: none !important;
-  font-weight: bold !important;
-  font-size: 18px !important;
-  color: #FF3435;
-  cursor: pointer;
-  height: auto;
-  padding: 0 0.6rem 0 0;
-}
-
-:local .container select:hover {
-  color: #23527c;
-}
-
-:local .container button:focus {
-  background: unset;
-}
-
 :local .breadcrumb {
-  margin-bottom: unset;
+  margin-bottom: 0;
+  display: flex;
+  align-items: flex-end;
 }
 
 :local .breadcrumb > li + li::before {
   padding: 0 2px;
+}
+
+:local .splitButton button:active,
+.splitButton button:focus,
+.splitButton button:hover {
+  color: #23527c !important;
+  background: transparent !important;
+}
+
+:local .splitButton button:active,
+.splitButton button:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+:local .splitButton button {
+  background: transparent !important;
+  border: none;
+  color: #ff3435;
+  font-size: 18px;
+  font-weight: bold;
+  box-shadow: none !important;
+  text-transform: capitalize;
+  padding: 0;
+}
+
+:local .splitButton button:nth-child(2) {
+  padding-right: 0.5rem !important;
+  padding-left: 1rem !important;
+  top: -0.1rem !important;
+}
+
+:local .splitButton ul {
+  font-size: 18px !important;
+  padding: 0;
+  text-transform: capitalize;
+  min-width: auto;
+}
+
+:local .splitButton ul a {
+  padding: 0.6rem 3rem 0.6rem 1.8rem;
 }
 
 @media (min-width: 768px) {
