refac(cross): #3563 improve semrush score
- Fixed a broken link in Careers faq
- Minify plugins scripts


Former-commit-id: 9d5ddbf52c03395a83b11fc4827f7e57ed970bf0

--- a/theme/2020/templates/base.html
+++ b/theme/2020/templates/base.html
@@ -182,11 +182,11 @@
     <!-- End Google Tag Manager -->
   </head>
   <body class="bg-white ma0 lh-copy">
-    {% assets output="static/js/contentHome.min.js", "../node_modules/jquery/dist/jquery.js", "js/tmp/contentHome.min.js", "js/tmp/dynClasses.min.js", "js/assets/tipuesearch/tipuesearch.min.js", "../node_modules/iframe-resizer/js/iframeResizer.js", "js/assets/tipuesearch/tipuesearch_set.js" %}
+    {% assets filters="uglifyjs", output="static/js/plugins.min.js", "../node_modules/jquery/dist/jquery.js", "js/assets/tipuesearch/tipuesearch.min.js", "../node_modules/iframe-resizer/js/iframeResizer.js", "js/assets/tipuesearch/tipuesearch_set.js" %}
       <script type="text/javascript"
               src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
     {% endassets %}
-    {% assets output="static/js/anchor.min.js", "js/tmp/anchor.min.js" %}
+    {% assets output="static/js/contentHome.min.js", "js/tmp/contentHome.min.js", "js/tmp/dynClasses.min.js", "js/tmp/anchor.min.js" %}
     <script type="text/javascript"
               src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
     {% endassets %}
