refac(front): #3565 add webinar and change links
- New webinar on Resources and changed links.


Former-commit-id: d5b469b10e73c41fa4722a753b6782e6be3b0de3

--- a/theme/2020/templates/resources/resources.html
+++ b/theme/2020/templates/resources/resources.html
@@ -156,7 +156,7 @@
           <br>
         </p>
         <div class="pv4 tc">
-          <a href="https://www.youtube.com/watch?v=tGNbQelMrFA">
+          <a href="https://www.gotostage.com/channel/d38612ee120645cd93ac5ef7f65119f6/recording/287e90418c824496b67638480010f2b4/watch">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
           </a>
         </div>
@@ -198,7 +198,7 @@
           <br>
         </p>
         <div class="pv4 tc">
-          <a href="https://www.youtube.com/watch?v=N6nVIOsnaOA">
+          <a href="https://register.gotowebinar.com/register/8185058534297954575">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
           </a>
         </div>
@@ -242,7 +242,7 @@
           <br>
         </p>
         <div class="pv4 tc">
-          <a href="https://www.youtube.com/watch?v=zUJ_kU79j7E">
+          <a href="https://www.gotostage.com/channel/d38612ee120645cd93ac5ef7f65119f6/recording/702df3005c534f6992ad60bffc63bdee/watch">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
           </a>
         </div>
@@ -313,23 +313,46 @@
       </div>
     </div>
     <div
-    class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
-    <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card8.png"
-    alt="Webinar cover ESP"
-    class="br3 br--top">
-    <div class="ph3 mh1">
-      <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
-        Continuous Hacking and Vulnerability Remediation
-        <br>
-      </h1>
-      <p class="c-fluid-bk fw3 f5 mv0">
-        What Data Tells Us About Continuous Hacking?
-        <br>
-      </p>
-      <div class="pv4 tc">
-        <a href="https://www.youtube.com/watch?v=VWwqhA2LFHg">
-          <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
-        </a>
+      class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card8.png"
+      alt="Webinar cover ESP"
+      class="br3 br--top">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
+          Continuous Hacking and Vulnerability Remediation
+          <br>
+        </h1>
+        <p class="c-fluid-bk fw3 f5 mv0">
+          What Data Tells Us About Continuous Hacking
+          <br>
+        </p>
+        <div class="pv4 tc">
+          <a href="https://register.gotowebinar.com/register/3700452970867466510">
+            <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div
+      class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card3.png"
+      alt="Webinar cover ESP"
+      class="br3 br--top">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
+          Key Elements of Our Continuous Hacking
+          <br>
+          <br>
+        </h1>
+        <p class="c-fluid-bk fw3 f5 mv0">
+          What Data Tells Us About Continuous Hacking (Spanish)
+          <br>
+        </p>
+        <div class="pv4 tc">
+          <a href="https://register.gotowebinar.com/register/8330343603644644110">
+            <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
+          </a>
+        </div>
       </div>
     </div>
   </div>
