--- a/front/src/scenes/Dashboard/components/Navbar/index.css
+++ b/front/src/scenes/Dashboard/components/Navbar/index.css
@@ -57,7 +57,9 @@
   font-size: 18px !important;
   padding: 0;
   text-transform: capitalize;
+  max-height: 500px !important;
   min-width: auto;
+  overflow-y: auto !important;
 }
 
 :local .splitButton ul a {
