feat(front): #3456.1 animate turbine
- Addd gsap to create animations
- Create animation for the main turbine in the home page


Former-commit-id: 56cd73a9c23e35f9240a46675e680a8298600737

--- a/theme/2020/templates/base.html
+++ b/theme/2020/templates/base.html
@@ -186,7 +186,7 @@
       <script type="text/javascript"
               src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
     {% endassets %}
-    {% assets output="static/js/contentHome.min.js", "js/tmp/contentHome.min.js", "js/tmp/dynClasses.min.js", "js/tmp/anchor.min.js" %}
+    {% assets output="static/js/contentHome.min.js", "js/tmp/contentHome.min.js", "js/tmp/dynClasses.min.js", "js/tmp/anchor.min.js", "js/tmp/gsapAnimations.min.js" %}
     <script type="text/javascript"
               src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
     {% endassets %}
