--- a/theme/2020/templates/base.html
+++ b/theme/2020/templates/base.html
@@ -47,6 +47,10 @@
         <link
         rel="stylesheet"
         href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
+
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
       <!-- Highlight.js syntax highlighter -->
       <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.1.1/styles/foundation.min.css">
