refac(front): #3566.1 adjust the home horizontally
Former-commit-id: be3aa7106315f8a7e92aa6fca2d5c3f5c0a5f2d6

--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -231,6 +231,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   .ml0-footer { margin-left: 0; }
   .db-xl { display: block; }
   .fr-xl { float: right; }
+  .mr3-xl { margin-right: 1rem; }
 }
 
 // Small screens
