--- a/theme/2020/templates/menu.html
+++ b/theme/2020/templates/menu.html
@@ -7,7 +7,7 @@
             src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
         </a>
       </li>
-      <li class="relative fr mv4-l mv3 mr5-l right-small pv3-l pv-4-m">
+      <li class="relative fr mv4-l mv3 mr3-xl right-small pv3-l pv-4-m">
         <input type="checkbox" id="op" class="dn" />
         <div class="lower">
           <label for="op" class="pointer dib h2-l">
@@ -17,7 +17,7 @@
         </div>
         <div class="overlay overlay-hugeinc bg-white fixed w-100 h-100 top-0 left-0 z-100 overflow-y-auto">
           <div class="mw9 tr ml-auto mr-auto ph3">
-            <label for="op" class="mr5-l right-small">
+            <label for="op" class="mr3-xl right-small">
               <img
                 loading="lazy"
                 class="lower-img w2-l w-menu-bt mv4-l pv2-l mv3 pv-4-m right-0 pointer z-100 relative"
