--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -14,7 +14,7 @@
 {% block header %}
 
 <div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s h50-l h6-m h40-s mb5 pb5">
-  <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt6-l pt4 mw9 ml-auto mr-auto">
+  <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt6-l pt4 mw9 ml-auto mr-auto w-100">
     <!-- Banner Image-->
     <div class="fr-l w-45-l w100-m w90-s tc ml-auto mr-auto">
       <img loading="lazy" class="new-banner" id="turbine"
@@ -24,7 +24,7 @@
     <!-- Banner title and text -->
     <div class="fl-l w-50-l w100-m w90-s mt3-l center pt0-ns pt4">
       <h1 class="turbine-text c-fluid-bk fheader-l f-6-m fheader-s fheader-vl fw9 tl tc-m neue ma0">PENTEST</h1>
-      <p class="turbine-text c-fluid-bk roboto fw8 lh2 f-sub ma0 tl tc-m w-auto-ns nt4-ns">
+      <p class="turbine-text c-fluid-bk roboto fw3 lh2 f-sub ma0 tl tc-m w-auto-ns nt4-ns">
         FOR YOUR SOFTWARE DEVELOPMENT LIFE CYCLE
       </p>
       <!-- Get a Demo button -->
@@ -307,7 +307,8 @@
 <div class="bg-dk-red">
   <div class="pv6">
     <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3">
-      Are you going fast in the wrong direction? Hacking with speed and precision
+      Are you going fast in the wrong direction?<br>
+      Hacking with speed and precision
     </h2>
     <div class="tc">
       <a href="https://fluidattacks.docsend.com/view/fcq5m7gihzrfz2fu?utm_source=SalesForce&utm_campaign=4bddad20be-CAMPAIGN_08%2F07_Fluid&utm_medium=email&utm_term=0_1885d82ba1-4bddad20be-251550621">
