fix(front): #3574 fix the topbar alignment
Former-commit-id: 54d0ae50f52437dde8a2f45fee89db5eef5f75eb

--- a/theme/2020/templates/menu.html
+++ b/theme/2020/templates/menu.html
@@ -3,7 +3,7 @@
     <ul class="list ma0 pa0 overflow-hidden">
       <li class="fl">
         <a class="db tc pa1 no-underline" href="{{ SITEURL }}/">
-          <img loading="lazy" class="h-logo ml3 mv2 pv2 absolute"
+          <img loading="lazy" class="h-logo ml3 mv2 pv2-ns pv3 absolute"
             src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
         </a>
       </li>
@@ -223,7 +223,7 @@
           <button class="outline-transparent fw7 br2 ph2 pv1 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">CONTACT</button>
         </a>
       </li>
-      <li class="db-ns dn relative fr mt-menu mr3 pr2 mv4-l mv3 pv2-l pv-4-m">
+      <li class="relative fr mt-menu mr3 pr2 mv4-l mv3 pv2-l pv-4-m">
         <a class="tc no-underline c-fluid-bk f-key-features menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="https://fluidattacks.com/integrates">
           <button class="outline-transparent fw7 bn ph0 pv1 hv-fluid-rd bg-transparent pointer">LOGIN</button>
