integrates\refac(cross): #2407 unify bundle
- a small step towards spa


Former-commit-id: 25c638588109cf2da8d65012ec0e19dd8f38c0b4

--- a/app/templates/unauthorized.html
+++ b/app/templates/unauthorized.html
@@ -64,7 +64,7 @@
         localStorage.setItem("start_url",getUrl[getUrl.length - 1]);
         function Redirect()
         {
-            location = "/integrates/index";
+            location = "/integrates";
         }
         setTimeout(Redirect, 3000);
     </script>
