--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,9 +21,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
     {% if 'localhost' in request.get_host and debug %}
-      <link rel="stylesheet" href="https://localhost:3000/dashboard/login-style.min.css" type="text/css">
+      <link rel="stylesheet" href="https://localhost:3000/dashboard/app-style.min.css" type="text/css">
     {% else %}
-      <link rel="stylesheet" href="{% static 'dashboard/login-style.min.css' %}" type="text/css">
+      <link rel="stylesheet" href="{% static 'dashboard/app-style.min.css' %}" type="text/css">
     {% endif %}
     <style> body { background-color: #272727; }</style>
   </head>
@@ -31,9 +31,9 @@
     <iframe title="Frame 1" hidden></iframe><iframe title="Frame 2" hidden></iframe><iframe title="Frame 3" hidden></iframe>
     <div id="root"></div>
     {% if 'localhost' in request.get_host and debug %}
-      <script src="https://localhost:3000/dashboard/login-bundle.min.js" type="text/javascript"></script>
+      <script src="https://localhost:3000/dashboard/app-bundle.min.js" type="text/javascript"></script>
     {% else %}
-      <script src="{% static 'dashboard/login-bundle.min.js' %}" type="text/javascript"></script>
+      <script src="{% static 'dashboard/app-bundle.min.js' %}" type="text/javascript"></script>
     {% endif %}
   </body>
 </html>
