--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
     <title>Integrates | Fluid Attacks</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700|Source+Sans+Pro:300,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
     {% if 'localhost' in request.get_host and debug %}
       <link rel="stylesheet" href="https://localhost:3000/dashboard/app-style.min.css" type="text/css">
