--- a/front/src/scenes/Login/index.css
+++ b/front/src/scenes/Login/index.css
@@ -10,34 +10,40 @@
   margin-top: -6%;
 }
 
-:local .googleBtn {
+:local .socialBtn {
   align-items: center;
-  background-color: #CC0000;
-  border-color: #AA0000;
   border-radius: 0px;
-  color: white;
   display: flex;
   font-size: 18px;
   height: 40px;
   justify-content: space-between;
+}
+
+:local .socialBtn:hover {
+  filter: brightness(90%);
+}
+
+:local .socialBtn:focus, .socialBtn:active:focus {
+  outline: 0;
+}
+
+:local .bitbucketBtn {
+  background-color: #0747A6;
+  border-color: #0747A6;
+}
+
+:local .googleBtn {
+  background-color: #CC0000;
+  border-color: #AA0000;
+  color: white;
   margin-top: 60px;
 }
 
 :local .microsoftBtn {
-  align-items: center;
   background-color: #007BFF;
   border-color: #007BFF;
-  border-radius: 0px;
-  display: flex;
-  font-size: 18px;
-  height: 40px;
-  justify-content: space-between;
 }
 
-:local .microsoftBtn:hover {
-  background-color: #0069D9;
-  border-color: #0062CC;
-}
 
 :local .twofactor {
   background-color: #3D3C3C !important;
