fix(front): #3582 navbar size in big screens
- Changed the size for the navbar from px to rem to make it responsive


Former-commit-id: 033e0f69e947fbf06b4d5eaac655f8d38539d6c1

--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -212,7 +212,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .h30-em { height: 30em; }
 .shadow-menu { box-shadow: 0 5px 5px 0 rgb(176,176,176,0.2); }
 .h-logo { height: 70px; }
-.h-navbar { height: 110px; }
+.h-navbar { height: 6.875rem; }
 
 // Tachyons custom responsive classes
 @media screen and (min-width: 960px) and (max-width: 1200px) {
