--- a/theme/2020/templates/menu.html
+++ b/theme/2020/templates/menu.html
@@ -1,6 +1,6 @@
 <div class="cssmenu bg-white lh-solid h-navbar cover shadow-menu relative">
-  <div class="b relative w-100 z-5 mw9 mr-auto ml-auto">
-    <ul class="list ma0 pa0 overflow-hidden">
+  <div class="b relative w-100 z-5 mw9 mr-auto ml-auto h-navbar">
+    <ul class="list ma0 pa0 overflow-hidden h-navbar">
       <li class="fl">
         <a class="db tc pa1 no-underline" href="{{ SITEURL }}/">
           <img loading="lazy" class="h-logo ml3 mv2 pv2-ns pv3 absolute"
